Update player_id so we can input player without team_id
